# demofoundry-lib

./: .env.example  .gitignore  README.md  mkdocs.yml
about/: about.md
backend/: README.md  pyproject.toml  requirements.txt
backend/demofoundry/: __init__.py  cli.py  config.py  main.py  models.py  render.py  serde.py  store.py  voices.py
backend/demofoundry/pipeline/: __init__.py  capture.py  compose.py  inspect.py  pptx_ingest.py  screencap.py  scripting.py  sync.py  tts.py
backend/demofoundry/static/: index.html
backend/tests/: conftest.py  test_capture.py  test_cli.py  test_compose.py  test_pptx_ingest.py  test_serde.py  test_sync.py  test_tts.py  test_voices.py
backend/tests/fixtures/: sample.html
docs/: features.md  index.md
docs/architecture/: automation.md  index.md  mvp.md  screen-capture-macos.md  scripting.md  sync-engine.md
docs/guide/: cli.md  library.md  overview.md  powerpoint.md  screen-capture.md  writing-scripts.md
docs/sample-scripts/: README.md  demofoundry-feature-tour.playwright.steps.json  demofoundry-self-demo.playwright.steps.json  demofoundry-web-tour.steps.json  webmethods-getting-started.steps.json
examples/: desktop-feature-demo.steps.json
memory/: README.md  decisions.md  notes.md
